--- a/TareaExamen/proyecto5/Proyecto5.tex
+++ b/TareaExamen/proyecto5/Proyecto5.tex
@@ -4,6 +4,7 @@
 \usepackage{amssymb, amsmath}
 \usepackage{stackengine}
 \usepackage{graphicx}
+\usepackage{ mathrsfs }
 \usepackage{lipsum}
 \usepackage{dsfont}
 \usepackage[margin=1.5cm,
@@ -327,18 +328,77 @@ Finalmente por el segundo caso de la regla de la cadena, sólo tenemos que multi
 \end{align*}
 
 \noindent3.  Calcule la derivada direccional de las siguientes funciones en el punto y la dirección dada: \\
-
+\begin{theorem}[Derivada direccional]
+	Si $ f:\R^2 \to \R $ es diferenciable, entonces todas las derivadas existen, además la derivada direccional en $ \vec{x} $ en la dirección de $ \vec{v} $ está dada por
+	\[ Df(\vec{x}) = \nabla f(\vec{x}) \* \vec{v} = \left( \dfrac{\d}{\d x} f(\vec{x}) \right) v_1 +  \left( \dfrac{\d}{\d y} f(\vec{x}) \right) v_2 \]
+	Donde $ \vec{v} = (v_1, v_2) $
+\end{theorem}
 
 a) $f(x,y) = x + 2xy -3y^2$, $(x_0, y_0) = (1,2)$ y $\vec{v} = \frac{3}{5}\hat{e}_1 + \frac{4}{5}\hat{e}_2 $.\\
 
-b) $f(x,y) = \ln{\sqrt{x^2 + y^2}}$, $(x_0, y_0) = (1,0)$ y $\vec{v} = \left( \frac{1}{\sqrt{5}} \right)(2\hat{e}_1 + \hat{e}_2 )$.\\
+\begin{align*}
+	\nabla f(x,y) &= \left( \dfrac{\d}{\d x}  (x + 2xy -3y^2), \dfrac{\d}{\d y} (x + 2xy -3y^2) \right) && \text{Planteando el gradiente}\\
+	\nabla f(x,y) &= \left( 1 + 2y , 2x -6y \right) && \text{Calculando las parciales }\\
+	\\	
+	\nabla f(1,2) \* \vec{v} &= \left( 1 + 2y , 2x -6y \right) \* \left(\dfrac{3}{5}, \dfrac{4}{5}\right) && \text{Por el teorema enunciado al inicio del ejercicio}\\
+	\nabla f(1,2) \* \vec{v} &= \left( 1 + 2(2) , 2 -6(2) \right) \* \left(\dfrac{3}{5}, \dfrac{4}{5}\right) && \text{Sustituyendo por los valores de }x_0, y_0 \\
+	\nabla f(1,2) \* \vec{v} &= \left( 5 ,-10 \right) \* \left(\dfrac{3}{5}, \dfrac{4}{5}\right) && \text{Evaluando los puntos}\\
+	\nabla f(1,2) \* \vec{v} &= \left( 5\* \dfrac{3}{5} + (-10)\*\dfrac{4}{5} \right) && \text{Multiplicando entrada a entrada  }\\
+	\nabla f(1,2) \* \vec{v} &= \left(3 + (-8)\right) && \text{Simplificando las fracciones  }\\
+	\nabla f(1,2) \* \vec{v} &=-5 && \text{Operando}
+\end{align*}
+\newpage
+b) $f(x,y) = \ln{\sqrt{x^2 + y^2}}$, $(x_0, y_0) = (1,0)$ y $\vec{v} = \left( \frac{1}{\sqrt{5}} \right)(2\hat{e}_1 + \hat{e}_2 )$.
 
-c) $f(x,y) = e^x\cos{(\pi y)}$, $(x_0, y_0) = (0,-1)$ y $\vec{v} = - \left( \frac{1}{\sqrt{5}} \right)\hat{e}_1 +  \left( \frac{2}{\sqrt{5}} \right)\hat{e}_2 $.\\
+\begin{align*}
+	\nabla f(x,y) &= \left( \dfrac{\d}{\d x} \ln{\sqrt{x^2 + y^2}}, \dfrac{\d}{\d y}\ln{\sqrt{x^2 + y^2}} \right) && \text{Planteando el gradiente}\\
+	\nabla f(x,y) &= \left( \dfrac{x}{x^2 + y^2}, \dfrac{y}{x^2 + y^2} \right) && \text{Calculando las derivadas parciales}\\
+	\\	
+	\nabla f(1,0) \* \vec{v} &= \left( \dfrac{(1)}{(1)^2 + (0)^2}, \dfrac{(0)}{(1)^2 + (0)^2}  \right) \* \left(\dfrac{2}{\sqrt{5}}, \dfrac{1}{\sqrt{5}} \right) && \text{Sustituyendo por los valores de } x_0, y_0\\
+	\nabla f(1,0) \* \vec{v} &= \left(1,0\right) \* \left(\dfrac{2}{\sqrt{5}}, \dfrac{1}{\sqrt{5}} \right) && \text{Evaluando la expresión }\\
+	\nabla f(1,0) \* \vec{v} &= \dfrac{2}{\sqrt{5}}&& \text{Multiplicando }\\
+\end{align*}
 
-d) $f(x,y) = xy^2 + x^3y$, $(x_0, y_0) = (4,-2)$ y $\vec{v} =  \left( \frac{1}{\sqrt{10}} \right)\hat{e}_1 +  \left( \frac{3}{\sqrt{10}} \right)\hat{e}_2 $.\\
+c) $f(x,y) = e^x\cos{(\pi y)}$, $(x_0, y_0) = (0,-1)$ y $\vec{v} = - \left( \frac{1}{\sqrt{5}} \right)\hat{e}_1 +  \left( \frac{2}{\sqrt{5}} \right)\hat{e}_2 $.
+
+\begin{align*}
+	\nabla f(x,y) &= \left( \dfrac{\d}{\d x} (e^x\cos{(\pi y)}), \dfrac{\d}{\d y}(e^x\cos{(\pi y)}) \right) && \text{Planteando el gradiente}\\
+	\nabla f(x,y) &= \left( e^x\cos(\pi y), -e^x\sin(\pi y) \right) && \text{Calculando las derivadas parciales}\\
+	\\	
+	\nabla f(0,-1) \* \vec{v} &= \left( e^0\cos(-\pi ), -e^0\sin(-\pi ) \right) \* \left(-\dfrac{1}{\sqrt{5}}, \dfrac{2}{\sqrt{5}} \right) && \text{Sustituyendo por los valores de } x_0, y_0\\
+	\nabla f(0,-1) \* \vec{v} &= \left( \cos(-\pi ), -\sin(-\pi ) \right) \* \left(-\dfrac{1}{\sqrt{5}}, \dfrac{2}{\sqrt{5}} \right) && \text{Minimizando la expresión}\\
+	\nabla f(0,-1) \* \vec{v} &= \left( \cos(\pi ), \sin(\pi ) \right) \* \left(-\dfrac{1}{\sqrt{5}}, \dfrac{2}{\sqrt{5}} \right) && \text{Porque seno es impar y coseno par }\\
+	\nabla f(0,-1) \* \vec{v} &= \dfrac{2\sin(\pi)}{\sqrt{5}} - \dfrac{\cos(\pi)}{\sqrt{5}} && \text{Haciendo la multiplicación }\\
+	\nabla f(0,-1) \* \vec{v} &= \dfrac{0}{\sqrt{5}} + \dfrac{1}{\sqrt{5}} && \text{Evaluando las trigonométricas }\\
+	\nabla f(0,-1) \* \vec{v} &=  \dfrac{1}{\sqrt{5}} && \text{ }\\
+\end{align*}
+
+d) $f(x,y) = xy^2 + x^3y$, $(x_0, y_0) = (4,-2)$ y $\vec{v} =  \left( \frac{1}{\sqrt{10}} \right)\hat{e}_1 +  \left( \frac{3}{\sqrt{10}} \right)\hat{e}_2 $.
+\begin{align*}
+	\nabla f(x,y) &= \left( \dfrac{\d}{\d x} (xy^2 + x^3y), \dfrac{\d}{\d y}(xy^2 + x^3y) \right) && \text{Planteando el gradiente}\\
+	\nabla f(x,y) &= \left( y^2 + 3x^2y ,2xy + x^3 \right) && \text{Calculando las derivadas parciales}\\
+\end{align*}
+\begin{align*}
+	\nabla f(4,-2) \* \vec{v} &= \left(y^2 + 3x^2y ,2xy + x^3 \right) \* \left(\dfrac{1}{\sqrt{10}}, \dfrac{3}{\sqrt{10}} \right) && \text{Planteando la derivada direccional } \\
+	\nabla f(4,-2) \* \vec{v} &= \left((-2)^2 + 3(4)^2(-2) ,2(4)(-2) + 4^3 \right) \* \left(\dfrac{1}{\sqrt{10}}, \dfrac{3}{\sqrt{10}} \right) && \text{Sustituyendo por los valores de } x_0, y_0\\
+	\nabla f(4,-2) \* \vec{v} &= \left(-92,48 \right) \* \left(\dfrac{1}{\sqrt{10}}, \dfrac{3}{\sqrt{10}} \right) && \text{Efectuando el cálculo} \\
+	\nabla f(4,-2) \* \vec{v} &= \dfrac{52}{\sqrt{10}} && \text{Multiplicando entrada a entrada} \\
+\end{align*}
 
 
 \noindent4. Encuentre un vector que sea normal a la curva $x^3 + xy + y^3 = 11$ en  $(1,2)$.\\
+
+\begin{theorem}[El gradiente es  normal a la superficie de nivel]
+	Sean $ f: U \subset \R^2 \to \R $ de clase $ \mathscr{C}^1 $ y $ (x_0, y_0) $ un punto sobre la superficie de nivel $\mathcal{S}  $ definida por $ f(x,y) = k, \quad k \in \R $. Entonces $ \nabla f(x_0, y_0) $ es normal a la superficie de nivel en el siguiente sentido. Si $ \vec{v} $ es el vector tangente en $ t = 0 $ de una trayectoria $ \vec{\gamma} $ en $ \mathcal{S} $ con $ \vec{\gamma}(0) = (x_0,y_0) $ entonces $ \nabla f(x_0,y_0) \* \vec{v} = 0 $
+\end{theorem}
+
+Para este ejercicio $ (x_0,y_0) = (1,2) $ y también $ f(x,y) = x^3+xy+y^3 $ con $ k = 11 $ por lo que sólo resta calcular el gradiente de la función 
+\begin{align*}
+	\nabla f(x,y) &= \left(\dfrac{\d}{\d x} (x^3+xy+y^3) , \dfrac{\d}{\d y} (x^3+xy+y^3)\right) && \text{Por definición del gradiente}\\
+	\nabla f(x,y) &= \left(3x^2 + y , x+3y^2 \right) && \text{Calculando las parciales}\\
+\end{align*}
+
+Finalmente evaluamos en el punto deseado por lo que $ \nabla f(1,2) = (5,13) $ es el vector normal a la curva dada.\\
 
 \noindent5.  El Capitán Ralphis se encuentra en problemas cerca del lado soleado de Mercurio. La temperatura del casco del barco cuando está en la ubicación $(x, y, z)$ estará dada por $T(x,y,z) = e^{-x^2 - 2y^2 - 3z^2}$, donde $x,y,z$ se miden en metros. Actualmente está en $(1,1,1)$.\\
 
