Final al proyecto 5

--- a/TareaExamen/proyecto5/Proyecto5.tex
+++ b/TareaExamen/proyecto5/Proyecto5.tex
@@ -476,6 +476,7 @@ Por lo tanto, el conjunto de vectores que solucionan este problema es
 
 donde $ \theta $ es el ángulo formado entre $ \nabla T(1,1,1) $ y el vector $ \vec{x} $
 
+% el profe aún no me constesta pero seguiré dejando este espacio en blanco por si lo necestamos
 
 
 
